# sfml-space-invaders

./: .clang-format  BUILDING.md  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  lint.sh
.github/workflows/: cmake-multi-platform.yml
cmake/: README.md  macbundle.cmake
res/: SpaceInvaders.icns
src/: Bullet.cpp  Bullet.h  CollisionManager.cpp  CollisionManager.h  Enemy.cpp  Enemy.h  LoseScreen.cpp  LoseScreen.h  ResourcePath.cpp  ResourcePath.h  ResourcePath.hpp  ResourcePath.mm  Ship.cpp  Ship.h  SoundManager.cpp  SoundManager.h  WinScreen.cpp  WinScreen.h  main.cpp
